# module_menu

./: .flake8  .gitignore  .pylintrc  README.md  dotenv_.py  pyproject.toml  requirements.txt
archive/: db-module_menu.drawio
module_menu/: admin.py  apps.py  models.py  views.py
module_menu/migrations/: 0001_initial.py  0002_alter_linksmode_links_alter_linksmode_texts_and_more.py  0002_alter_linksmode_texts_alter_sublinksmode_texts.py  0002_alter_menunamesmode_options_and_more.py  0003_alter_linksmode_links_alter_linksmode_texts_and_more.py  0003_alter_menunamesmode_pages_id.py  0003_alter_sublinksmode_links_id.py  0004_alter_linksmode_links_alter_linksmode_texts_and_more.py  0004_alter_menunamesmode_pages_id.py  0005_alter_linksmode_texts_alter_sublinksmode_texts.py  0005_remove_menunamesmode_pages_id.py  0006_alter_linksmode_texts_alter_sublinksmode_texts.py  0006_pagemodel_menu_id.py  0007_remove_pagemodel_menu_id_pagemodel_menu_id.py  0007_remove_sublinksmode_active.py  0008_alter_linksmode_links_alter_linksmode_texts_and_more.py  0008_linksmode_active.py  0009_alter_linksmode_links.py  0009_pagemodel_active.py  0010_alter_sublinksmode_name_id.py  0010_alter_sublinksmode_options_alter_linksmode_active.py  0011_alter_sublinksmode_name_id.py  0012_alter_pagemodel_menu_id.py  0013_pagemodel_template.py  0014_rename_menu_id_pagemodel_menu_list.py  0015_alter_pagemodel_template.py  0016_alter_pagemodel_template.py  0017_alter_pagemodel_template.py  0018_alter_pagemodel_template.py
module_menu/templates/: index.html
project_root/: rest_router.py  settings.py  urls.py
(+5 files in other folders)
